2015-02-24  Luiz Irber  <irberlui@msu.edu>

   * khmer/_khmermodule.cc: Fix coding style violations.

2015-02-24  Luiz Irber  <irberlui@msu.edu>

   * khmer/_khmermodule.cc: Update extension to use recommended practices,
   PyLong instead of PyInt, Type initialization, PyBytes instead of PyString.
   Replace common initialization with explicit type structs, and all types
   conform to the CPython checklist.

2015-02-24  Tamer A. Mansour  <drtamermansour@gmail.com>

   * scripts/abundance-dist.py: Use CSV format for the histogram. Includes
   column headers.
   * tests/test_scripts.py: add coverage for the new --csv option in
   abundance-dist.py

2015-02-24  Michael R. Crusoe  <mcrusoe@msu.edu>

   * jenkins-build.sh: remove examples/stamps/do.sh testing for now; takes too
   long to run on every build. Related to #836

2015-02-24  Kevin Murray  <spam@kdmurray.id.au>

   * scripts/interleave-reads.py: Make the output file name print nicely.

2015-02-23  Titus Brown  <titus@idyll.org>

   * khmer/utils.py: added 'check_is_left' and 'check_is_right' functions;
   fixed bug in check_is_pair.
   * tests/test_functions.py: added tests for now-fixed bug in check_is_pair,
   as well as 'check_is_left' and 'check_is_right'.
   * scripts/interleave-reads.py: updated to handle Casava 1.8 formatting.
   * scripts/split-paired-reads.py: fixed bug where sequences with bad names
   got dropped; updated to properly handle Casava 1.8 names in FASTQ files.
   * scripts/count-median.py: added '--csv' output format; updated to properly
   handle Casava 1.8 FASTQ format when '--csv' is specified.
   * scripts/normalize-by-median.py: replaced pair checking with
   utils.check_is_pair(), which properly handles Casava 1.8 FASTQ format.
   * tests/test_scripts.py: updated script tests to check Casava 1.8
   formatting; fixed extract-long-sequences.py test.
   * scripts/{extract-long-sequences.py,extract-paired-reads.py,